--- a/EscalArt/templates/registration/login.html
+++ b/EscalArt/templates/registration/login.html
@@ -32,8 +32,10 @@
                 <label for="checkid">Recuerdame</label>
                 <a href="{% url 'reset_password' %}">¿Olvidaste tu contraseña?</a>
 
+                <div class="btn-inicio-sesion">
+                    <input class="boton-form" type="submit" value="Iniciar Sesion">
+                </div>
 
-                <input class="boton-form" type="submit" value="Iniciar Sesion">
 
             </form>
         </div>
